[gd_scene load_steps=8 format=3 uid="uid://d2ns7l58n50si"]

[ext_resource type="Texture2D" uid="uid://c8fdixfqjonoe" path="res://picture/main_menu/Green_line.png" id="1_v2jko"]
[ext_resource type="Script" path="res://scene/pages/Setingprof/pages/dell_acc.gd" id="1_vd3go"]
[ext_resource type="Texture2D" uid="uid://b5ctikq62r40v" path="res://picture/main_menu/back_button.png" id="3_0tlqp"]
[ext_resource type="Texture2D" uid="uid://csvoif6l7j3qu" path="res://picture/main_menu/strelka_white.png" id="3_gwr73"]
[ext_resource type="FontFile" uid="uid://blwr3mw3q5wd4" path="res://Roboto-Black.ttf" id="5_j53ji"]
[ext_resource type="Texture2D" uid="uid://y3c0ncun5647" path="res://picture/main_menu/green_krug.png" id="5_pe8ci"]

[sub_resource type="Theme" id="Theme_teyrb"]

[node name="dell_acc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vd3go")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 108

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Control"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.5
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(419.735, 97)
layout_mode = 2
texture = ExtResource("1_v2jko")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("3_0tlqp")
expand_mode = 2
stretch_mode = 4

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer/TextureRect"]
layout_mode = 0
offset_left = 71.0
offset_top = 67.0
offset_right = 139.0
offset_bottom = 134.0
rotation = 3.14159
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/icon_hover_color = Color(0.290196, 0.290196, 0.290196, 1)
icon = ExtResource("3_gwr73")
flat = true
icon_alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_j53ji")
theme_override_font_sizes/font_size = 35
text = "Удаление аккаунт"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="nuls" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "test"

[node name="HBoxContainer9" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer9"]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
custom_minimum_size = Vector2(350, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
icon = ExtResource("1_v2jko")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer9/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -22.0
offset_right = 70.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_j53ji")
theme_override_font_sizes/font_size = 26
text = "Удалить аккаунт"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/Control2"]
modulate = Color(0.541176, 0.541176, 0.541176, 0.623529)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_bottom = 4717.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_teyrb")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -63.0
offset_right = 299.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Control2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Вы уверенны что хотиту удалить аккаунт?"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Control2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Yes" type="Button" parent="MarginContainer/VBoxContainer/Control2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
icon = ExtResource("5_pe8ci")
flat = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Control2/VBoxContainer2/HBoxContainer/Yes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.5
offset_right = 24.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "ДА"

[node name="No" type="Button" parent="MarginContainer/VBoxContainer/Control2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
icon = ExtResource("5_pe8ci")
flat = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Control2/VBoxContainer2/HBoxContainer/No"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.5
offset_right = 24.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "НЕТ"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer/TextureRect/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer9/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control2/VBoxContainer2/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control2/VBoxContainer2/HBoxContainer/No" to="." method="_on_no_pressed"]
